sunder added code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>This is added by Tanmay</h1>
+    <h2>This is added by sunder</h2>
+    <p>This is para by sunder</p>
+    <b>This si also sunder</b>
 </body>
 </html>
